# infrastructure/entry-points/reactive-web/src/main/java/co/com/pragma/api/response/CustomStatus.java
@@ -14,6 +14,7 @@ public enum CustomStatus {
     USER_VALIDATION_ERROR(HttpStatus.BAD_REQUEST, "USER_VALIDATION_ERROR_400", "La solicitud tiene errores de validación."),
     INVALID_ROLE(HttpStatus.BAD_REQUEST, "INVALID_ROLE_400", "El rol especificado no es válido."),
     USER_NOT_FOUND(HttpStatus.NOT_FOUND, "USER_NOT_FOUND_400", "El usuario solicitado no existe."),
+    INVALID_CREDENTIALS(HttpStatus.UNAUTHORIZED, "INVALID_CREDENTIALS_401", "Credenciales inválidas."),
     USER_ALREADY_EXISTS(HttpStatus.CONFLICT, "USER_ALREADY_EXISTS_409", "El correo electrónico o el número de documento ya están registrados."),
 
     INTERNAL_SERVER_ERROR(HttpStatus.INTERNAL_SERVER_ERROR, "INTERNAL_SERVER_ERROR_500", "Ocurrió un error inesperado en el servidor.");
